<resources>
    <string name="app_name">UrMindTFG</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_prueba">Prueba</string>


    <string name="libreria_clave_valor">com.example.urmindtfg.PREFERENCE_FILE_KEY</string>
    <string name="title_activity_main">main</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_temas">Temas</string>
    <string name="menu_posts">Posts</string>
    <string name="menu_empleados">Empleados</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_recomendaciones">Recomendaciones</string>
    <string name="menu_logros">Logros</string>
    <string name="menu_ubicaciones">Ubicaciones</string>
    <string name="menu_cuenta">Tu Cuenta</string>
    <string name="menu_configuracion">Configuración</string>
</resources>