<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_temas">

    <fragment
        android:id="@+id/nav_temas"
        android:name="com.example.urmindtfg.ui.temas.TemasFragment"
        android:label="@string/menu_temas"
        tools:layout="@layout/fragment_temas" />
    <fragment
        android:id="@+id/nav_ubicaciones"
        android:name="com.example.urmindtfg.ui.ubicaciones.UbicacionesFragment"
        android:label="@string/menu_ubicaciones"
        tools:layout="@layout/fragment_ubicaciones" />
    <fragment
        android:id="@+id/nav_configuracion"
        android:name="com.example.urmindtfg.ui.configuracion.ConfiguracionFragment"
        android:label="@string/menu_configuracion"
        tools:layout="@layout/fragment_configuracion" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.urmindtfg.ui.post.HomeFragmentPsicologo"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_logros"
        android:name="com.example.urmindtfg.ui.logros.LogrosFragment"
        android:label="@string/menu_logros"
        tools:layout="@layout/fragment_logros" />
    <fragment
        android:id="@+id/nav_cuenta"
        android:name="com.example.urmindtfg.ui.cuenta.CuentaFragment"
        android:label="@string/menu_cuenta"
        tools:layout="@layout/fragment_cuenta" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.urmindtfg.ui.chat.ChatFragment"
        android:label="@string/menu_chats"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/nav_busqueda_usuarios"
        android:name="com.example.urmindtfg.ui.buscadorEmpleados.BuscadorEmpleadosFragment"
        android:label="fragment_users_usuario"
        tools:layout="@layout/fragment_buscador_empleados" />
    <fragment
        android:id="@+id/nav_usuarios_post"
        android:name="com.example.urmindtfg.ui.post.UsersFragment"
        android:label="fragment_users_usuario"
        tools:layout="@layout/fragment_users_usuario" />

</navigation>